tests/parser/command_form/test_02.m.out
In test_02.m, line 6
|     foo +kitten
|         ^^^^^^^ error: expected NEWLINE, found CARRAY instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
