tests/parser/command_form/test_02.m
% (c) Copyright 2019 Florian Schanda

function test_02()
    kitten = 42;
    foo = 5;
    foo +kitten
    foo + kitten
    foo+ kitten
    foo+kitten
end
